--- a/003.conditions/Monsto Game/index.html
+++ b/003.conditions/Monsto Game/index.html
@@ -11,6 +11,16 @@
   </head>
   <body>
     <section id="health-levels">
+      <div id="game-status">
+        <span id="lose-status">Lose: 
+          <span id="lose-count">0</span>
+        </span>
+        <span id="win-status">Won: 
+          <span id="win-count">0</span>
+        </span>
+      </div>
+
+      <hr>
       <h2>MONSTER HEALTH</h2>
       <progress id="monster-health" max="100" value="100">100%</progress>
       <h2>PLAYER HEALTH<span id="bonus-life">1</span></h2>
