Added RGB color changing feature

--- a/003.more on function/index.html
+++ b/003.more on function/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <title>Rock, Paper and Scissor</title>
+  <link rel="stylesheet" href="css/style.css">
   <script src="js/app.js" defer></script>
 </head>
 <body>
 
-  <input type="button" value="Start Game" id="start-btn">
+  <input type="button" value="Start Game" id="start-btn" class="btn-large">
   
 </body>
 </html>
